# codex-ts-sdk

./: .gitignore  README.md  coverage_full.txt  monitoring-data.json  package-lock.json  package.json  playwright-test.cjs  playwright-test.js  tsconfig.json  verify-critical.cjs  verify-fixes.cjs  verify-monotonic.cjs  verify-step-function.cjs  vitest.config.ts
.github/workflows/: test.yml
badges/: lint-summary.json  tests-summary.json
coverage/: coverage-summary.json
docs/: CLOUD_MIGRATION.md  README.md  architecture.md  changelog.md  cloud-tasks.md  getting-started.md  native-module.md  plugins.md  sprint-plan.md
examples/: README.md  approval-demo.ts  basic-chat.ts  error-handling.js  error-handling.ts  generate-scenario-report.cjs  live-smoke.js  rate-limit-collector.cjs  schedule-rate-limit-collection.sh  streaming.ts
examples/html/: scenario1-critical.html  scenario1-safe.html
native/codex-napi/: Cargo.toml  index.d.ts  index.js
native/codex-napi/src/: lib.rs
scripts/: prepare.cjs  setup.cjs
src/: auth.ts  index.ts  version.ts
src/bindings/: ClientRequest.ts  LoginApiKeyResponse.ts  index.ts
src/client/: CodexClient.ts  CodexClientBuilder.ts  CodexClientPool.ts  ConversationManager.ts
src/cloud/: CloudTasksClient.ts
src/errors/: CodexError.ts
src/internal/: nativeModule.ts  submissions.ts
tests/: CodexClient.behavior.test.ts  CodexClient.homedir.test.ts  CodexClient.test.ts  CodexClientPool.test.ts  auth.test.ts  conversation-manager.test.ts  index.test.ts  resolveModelVariant.test.ts  system-prompt-log.test.ts  version.test.ts
(+28 files in other folders)
