[package]
name = "codex_napi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3", features = ["tokio_rt"] }
napi-derive = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
codex-core = { git = "https://github.com/openai/codex", package = "codex-core", rev = "5332f6e2156e83a2dcd654a98a72696aa455f750" }
codex-protocol = { git = "https://github.com/openai/codex", package = "codex-protocol", rev = "5332f6e2156e83a2dcd654a98a72696aa455f750" }

[build-dependencies]
napi-build = "2"

[features]
default = []
